# git-ai

./: .env.example  .gitignore  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  demo.py  pyproject.toml  setup.py
git_ai/: __init__.py  cli.py  config.py  git_utils.py  llm_client.py
tests/: test_git_utils.py
